[webui] fix alignment of Build number.

--- a/fs_src/style.css
+++ b/fs_src/style.css
@@ -72,6 +72,7 @@ h1 {
 }
 
 .form-wrap-control {
+  padding: 0 0.3em;
   margin: 0.4em 0;
   display: inline-flex;
   flex-wrap: inherit;
